# tiktok-scraper-pay-per-video

./: LICENSE  README.md  export_dataset_csv.py  pyproject.toml
data/: input.example.json  sample_output.json
docs/: configuration.md  usage-examples.md
scripts/: export_dataset_csv.py  run_search_example.sh
src/: config.py  main.py
src/client/: http_session.py
src/modes/: init.py  music_mode.py  trend_mode.py
src/outputs/: exporters.py  init.py
src/utils/: init.py  logging_utils.py  rate_limit.py
